--- a/layout.html
+++ b/layout.html
@@ -1,24 +1,20 @@
-<!-- layout.html -->
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
-    <script src="{% static 'JS/script.js' %}"></script>
-    <title>{% block title %}Home Page{% endblock %}</title>
+    <link rel="stylesheet" href="./static/CSS/style.css">
+    <title>Home Page</title>
 </head>
 <body>
-    <section>
+    <header class="header-container">
         <!-- Barra de navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">        
             <div class="container">
                 <div class="d-flex">
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <img src="{% static 'images/logo.webp' %}" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
                         Wao!
                     </a>
                 </div>
@@ -28,31 +24,30 @@
                 <div class="collapse navbar-collapse ms-auto" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'siberian_husky' %}">Siberian Husky</a>
+                            <a class="nav-link" href="index.html">Siberian Husky</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'characteristics' %}">Characteristics</a>
+                            <a class="nav-link" href="characteristics.html">Characteristics</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'tips' %}">Tips</a>
+                            <a class="nav-link" href="tips.html">Tips</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'about' %}">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-    </section>
-    {% block content1 %}
-    {% endblock %}
+    </header>
     <main>
-        {% block content %}
-        {% endblock %}
+        <!-- El contenido de la página se incluirá en esta sección -->
     </main>
-
     <footer>
         <p>&copy; 2023 My First Website. All rights reserved.</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./static/JS/script.js"></script>
 </body>
 </html>
