Las páginas index, siberian husky y characteristics están finalizadas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             terrain. Today, the Siberian Husky is typically kept as a house 
                             pet, though they are still frequently used as sled dogs by competitive 
                             and recreational mushers.                            
-                            <a href="{% url 'siberian_husky' %}">Learn more</a>
+                            <a href="siberian_husky.html">Learn more</a>
                         </p> 
                     </section>
                 </div>
