--- a/layout.html
+++ b/layout.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse ms-auto" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Siberian Husky</a>
+                            <a class="nav-link" href="siberian_husky.html">Siberian Husky</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="characteristics.html">Characteristics</a>
