Se implemento curiosities.html y se creo tips.html, además de agregarse más imagenes y crear la lista ordenada y se creo una nuevo archivo .css

--- a/layout.html
+++ b/layout.html
@@ -30,6 +30,9 @@
                             <a class="nav-link" href="characteristics.html">Characteristics</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="curiosities.html">Curiosities</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="tips.html">Tips</a>
                         </li>
                         <li class="nav-item">
