--- a/curiosities.html
+++ b/curiosities.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./static/CSS/style.css">
         <link rel="stylesheet" href="./static/CSS/custom.css">
@@ -338,8 +340,6 @@
                     </div>
                 </div>
             </section12>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="./static/JS/script.js"></script>
         </main>
     </section>
     <footer id="footer-content"></footer>
