Reparando problemas de las imagenes

--- a/characteristics.html
+++ b/characteristics.html
@@ -35,19 +35,22 @@
                             </section>            
                         </div>           
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_coat.webp" alt="Siberian Husky coat">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_coat.webp" alt="Siberian Husky coat" class="img-fluid header-image">
                             </div>
                         </div>    
                     </div>
                 </div>
             </section1>
+            <p></p>
+            <p></p>
+            <p></p>
             <section2>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_siberian_eyes.webp" alt="Siberian Husky eyes">
+                        <div class="col-md-3">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_siberian_eyes.webp" alt="Siberian Husky eyes" class="img-fluid header-image">
                             </div>
                         </div>     
                         <div class="col-md-8">
@@ -65,6 +68,9 @@
                     </div>    
                 </div>
             </section2>
+            <p></p>
+            <p></p>
+            <p></p>
             <section3>
                 <div class="container">
                     <div class="row">
@@ -80,20 +86,23 @@
                                 </p>    
                             </section>            
                         </div>           
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_nose.webp" alt="Siberian Husky nose">
+                        <div class="col-md-3">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_nose.webp" alt="Siberian Husky nose" class="img-fluid header-image">
                             </div>
                         </div>    
                     </div>
                 </div>
-            </section3>            
+            </section3>   
+            <p></p>
+            <p></p>
+            <p></p>         
             <section4>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_tail.webp" alt="Siberian Husky tail">
+                        <div class="col-md-3">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_tail.webp" alt="Siberian Husky tail" class="img-fluid header-image">
                             </div>
                         </div>     
                         <div class="col-md-8">
@@ -110,7 +119,10 @@
                         </div>                                                                                                 
                     </div>    
                 </div>
-            </section4>            
+            </section4>     
+            <p></p>
+            <p></p>
+            <p></p>       
             <section5>
                 <div class="container">
                     <div class="row">
@@ -127,20 +139,23 @@
                                 </p>
                             </section>            
                         </div>           
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_size.webp" alt="Siberian Husky size">
+                        <div class="col-md-3">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_size.webp" alt="Siberian Husky size" class="img-fluid header-image">
                             </div>
                         </div>    
                     </div>
                 </div>
-            </section5>              
+            </section5>     
+            <p></p>
+            <p></p>
+            <p></p>         
             <section6>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_behavior.webp" alt="Siberian Husky Behavior">
+                            <div class="indice custom-box"> 
+                                <img src="static/images/Husky_behavior.webp" alt="Siberian Husky Behavior" class="img-fluid header-image">
                             </div>
                         </div>     
                         <div class="col-md-8">
