--- a/curiosities.html
+++ b/curiosities.html
@@ -23,8 +23,8 @@
                     <p></p>
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_pensativo.webp" alt="Siberian Husky boring">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_pensativo.webp" alt="Siberian Husky boring" class="img-fluid header-image">
                             </div>
                         </div>
                         <div class="col-md-8">                
@@ -105,8 +105,8 @@
                             </p>
                         </div>      
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_wolf.webp" alt="Siberian Husky vs Wolf" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_wolf.webp" alt="Siberian Husky vs Wolf" class="img-fluid header-image">
                             </div>
                         </div>                                          
                     </div>
@@ -128,8 +128,8 @@
                             </p>
                         </div>      
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_heterochromian.webp" alt="Siberian Husky heterochromia" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_heterochromian.webp" alt="Siberian Husky heterochromia" class="img-fluid header-image">
                             </div>
                         </div>                                           
                     </div>
@@ -157,8 +157,8 @@
                             </p>
                         </div>      
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_adapt.webp" alt="Siberian Husky adapts" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_adapt.webp" alt="Siberian Husky adapts" class="img-fluid header-image">
                             </div>
                         </div>                                           
                     </div>
@@ -180,8 +180,8 @@
                             </p>     
                         </div>      
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_voice.webp" alt="Siberian Husky voice" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_voice.webp" alt="Siberian Husky voice" class="img-fluid header-image">
                             </div>
                         </div>                                           
                     </div>
@@ -203,8 +203,8 @@
                             </p>     
                         </div>      
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_olsdest-1.webp" alt="Siberian Husky olddest" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_olsdest-1.webp" alt="Siberian Husky olddest" class="img-fluid header-image">
                             </div>
                         </div>                                           
                     </div>
@@ -249,8 +249,8 @@
                             </p>     
                         </div>                                                
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_run.webp" alt="Siberian Husky run" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_run.webp" alt="Siberian Husky run" class="img-fluid header-image">
                             </div>
                         </div>                          
                     </div>
@@ -286,8 +286,8 @@
                             </p>     
                         </div>                                                                          
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_war.webp" alt="Siberian Husky war" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_war.webp" alt="Siberian Husky war" class="img-fluid header-image">
                             </div>
                         </div>  
                     </div>
@@ -322,8 +322,8 @@
                             </p>
                         </div>                                                                          
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/husky-balto-1.webp" alt="Siberian Husky balto" class="rotating-images-container img-fluid">
+                            <div class="indice"> 
+                                <img src="static/images/husky-balto-1.webp" alt="Siberian Husky balto" class="img-fluid header-image">
                             </div>
                         </div>   
                     </div>
