--- a/siberian_husky.html
+++ b/siberian_husky.html
@@ -41,20 +41,23 @@
                                 </p> 
                             </section>
                         </div>
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_tour_3.webp" alt="Siberian Husky 3">
+                        <div class="col-md-3">
+                            <div class="indice custom-box">  
+                                <img src="static/images/Husky_tour_3.webp" alt="Siberian Husky 3" class="img-fluid header-image">
                             </div>
                         </div>                                                                              
                     </div>    
                 </div>
             </section1>
+            <p></p>
+            <p></p>
+            <p></p>
             <section2>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_tour_2.webp" alt="Siberian Husky 2">
+                        <div class="col-md-3">
+                            <div class="indice custom-box">  
+                                <img src="static/images/Husky_tour_2.webp" alt="Siberian Husky 2" class="img-fluid header-image">
                             </div>
                         </div>     
                         <div class="col-md-8">
@@ -72,7 +75,8 @@
                                     family life and get on well with other dogs. The Sibe's innate friendliness 
                                     render them indifferent watchdogs. These are energetic dogs who can't resist 
                                     chasing small animals, so secure running room is a must. An attractive feature 
-                                    of the breed: Sibes are naturally clean, with little doggy odor.                                </p>
+                                    of the breed: Sibes are naturally clean, with little doggy odor.                                
+                                </p>
                             </section>
                         </div>                                                                                                 
                     </div>    
@@ -115,8 +119,8 @@
                             </section>
                         </div>
                         <div class="col-md-4">
-                            <div class="rotating-images-container d-flex">
-                                <img src="static/images/Husky_Siberian_old.webp" alt="Siberian Husky old" class="custom-image">
+                            <div class="indice custom-box">  
+                                <img src="static/images/Husky_Siberian_old.webp" alt="Siberian Husky old" class="img-fluid header-image">
                             </div>
                         </div>                                                                            
                     </div>    
