Se está desarrollando tips.html

--- a/tips.html
+++ b/tips.html
@@ -1,24 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">          
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./static/CSS/style.css">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./static/JS/script.js"></script>
-        <script src="./static/JS/fetch.js"></script>
-        <title>Tips</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">          
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./static/CSS/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./static/JS/script.js"></script>
+    <script src="./static/JS/fetch.js"></script>        
+    <title>Tips</title>
+</head>
 <body>
     <div id="header-content"></div>        
     <section>
         <main>
-            test
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="./static/JS/script.js"></script>
+            <section>
+                <div class="container">
+                    <h1>Tips for caring for a husky</h1>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="indice"> 
+                                <img src="static/images/Husky_tour_1.webp" alt="Siberian Husky tour_1" class="img-fluid header-image">
+                            </div>
+                        </div>
+                        <div class="col-md-8">                
+                            <h3>
+                                The Husky is a recognizable “working” dog. You’ll have such fun with this pup who is:                               
+                            </h3>
+                            <div class="container">
+                                <div class="indice custom-box">
+                                    <ol id="ordered-list" class="list-unstyled custom-list">
+                                        <li>
+                                            <a>Outgoing, playful personality</a>
+                                        </li>  
+                                        <li>
+                                            <a>Sweet, gentle, and sensitive</a>
+                                        </li>
+                                        <li>
+                                            <a>Always on the go, with a keen eye for adventure</a>
+                                        </li>
+                                        <li>
+                                            <a>Good with children</a>
+                                        </li>
+                                        <li>
+                                            <a>Friendly and eager to please</a>
+                                        </li>
+                                        <li>
+                                            <a>Even-tempered, affectionate, and happy-go-lucky</a>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>          
+                                <h3>
+                                    Keep her busy and entertained, though, because she:
+                                </h3>
+                                <div class="container">
+                                    <div class="indice custom-box">
+                                        <ol id="ordered-list" class="list-unstyled custom-list">
+                                            <li>
+                                                <a>Has a tendency to escape, wander, and roam</a>
+                                            </li>  
+                                            <li>
+                                                <a>Is a bit “mouthy”—likes to carry and chew things</a>
+                                            </li>
+                                            <li>
+                                                <a>Likes to dig</a>
+                                            </li>
+                                            <li>
+                                                <a>Prone to boredom and separation anxiety when left alone and will find trouble</a>
+                                            </li>
+                                            <li>
+                                                <a>Can be difficult to housetrain</a>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>                                                          
+                        </div>                         
+                    </div>
+                    <div class="row">        
+                        <p>
+                            Siberian Huskies are intelligent and have an innate desire to work; they are highly 
+                            active and require vigorous exercise and space to run. Huskies make excellent jogging 
+                            partners in cool weather! She is not much of a barker, but she is a communal howler 
+                            especially when bored or under-exercised. The Siberian Husky is a generally healthy 
+                            breed with an average lifespan of 11-14 years.                
+                        </p>
+                    </div>
+                </div>                        
+            </section>    
+            <section1>
+                <div class="container">
+                    <div class="row">
+                            <h1>Your Siberian Husky’s Health</h1>
+                            <p>
+                                We know that because you care so much about your dog, you want to take good 
+                                care of her. That is why we have summarized the health concerns we will be 
+                                discussing with you over the life of your Husky. By knowing about health concerns 
+                                specific to Siberian Huskies, we can tailor a preventive health plan to watch 
+                                for and hopefully prevent some predictable risks.
+                            </p>
+                            <p>   
+                                Many diseases and health conditions are genetic, meaning they are related to your 
+                                pet’s breed. There is a general consensus among canine genetic researchers and 
+                                veterinary practitioners that the conditions we’ve described herein have a 
+                                significant rate of incidence and/or impact in this breed. That does not mean 
+                                your dog will have these problems; it just means that she is more at risk than 
+                                other dogs. We will describe the most common issues seen in Siberian Huskies to 
+                                give you an idea of what may come up in her future. Of course, we can’t cover 
+                                every possibility here, so always check with us if you notice any unusual signs 
+                                or symptoms.                               
+                            </p>
+                    </div>
+                </div>  
+            </section1>          
+            <section2>
+                <div class="container">
+                    <div class="row">
+                        <h1>General Health Information for your Siberian Husky</h1>
+                        <h3>Dental Disease</h3>
+                        <p>
+                            Dental disease is the most common chronic problem in pets, affecting 80% of all dogs by age two. 
+                            Unfortunately, your Siberian Husky is more likely than other dogs to have problems with her teeth. 
+                            Dental disease starts with tartar build-up on the teeth and progresses to infection of the gums 
+                            and roots of the teeth. If we don’t prevent or treat dental disease, your buddy may lose her 
+                            teeth and be in danger of damage to her kidneys, liver, heart, and joints. In fact, your Husky’s 
+                            life span may even be cut short by one to three years! We’ll clean your dog’s teeth regularly and 
+                            let you know what you can do at home to keep those pearly whites clean.
+                        </p>
+                    </div>
+                </div>  
+            </section2>     
+            <section3>
+                <div class="container">
+                    <div class="row">
+                        <h3>Infections</h3>
+                        <p>
+                            Siberian Huskies are susceptible to bacterial and viral infections — the same ones that 
+                            all dogs can get — such as parvo, rabies, and distemper. Many of these infections are preventable 
+                            through vaccination, which we will recommend based on her age, the diseases we see in our area, 
+                            and other factors.
+                        </p>
+                    </div>
+                </div>  
+            </section3>  
+            <section4>
+                <div class="container">
+                    <div class="row">
+                        <h3>Obesity</h3>
+                        <p>
+                            Obesity can be a significant health problem in Siberian Huskies. It is a
+                            serious disease that may cause or worsen joint problems, metabolic and 
+                            digestive disorders, back pain, and heart disease. Though it’s tempting to 
+                            give your pal food when she looks at you with those soulful eyes, you 
+                            can “love her to death” with leftover people food and doggie treats. Instead, 
+                            give her a hug, brush her fur or teeth, play a game with her, or perhaps take 
+                            her for a walk. She’ll feel better, and so will you!
+                        </p>
+                    </div>
+                </div>  
+            </section4>                
+            <section5>
+                <div class="container">
+                    <div class="row">
+                        <h3>Parasites</h3>
+                        <p>
+                            All kinds of worms and bugs can invade your Husky’s body, inside and out. Everything from fleas and ticks to ear mites can infest her skin and ears. Hookworms, roundworms, heartworms, and whipworms can get into her system in a number of ways: drinking unclean water, walking on contaminated soil, or being bitten by an infected mosquito. Some of these parasites can be transmitted to you or a family member and are a serious concern for everyone. For your canine friend, these parasites can cause pain, discomfort, and even death, so it’s important that we test for them on a regular basis. We’ll also recommend preventive medication as necessary to keep her healthy.
+                        </p>
+                    </div>
+                </div>  
+            </section5>  
+            <section6>
+                <div class="container">
+                    <div class="row">
+                        <h3>Spay or Neuter</h3>
+                        <p>
+                            One of the best things you can do for your Husky is to have her spayed (neutered for males). In females, this means we surgically remove the ovaries and usually the uterus, and in males, it means we surgically remove the testicles. Spaying or neutering decreases the likelihood of certain types of cancers and eliminates the possibility of your pet becoming pregnant or fathering unwanted puppies. Performing this surgery also gives us a chance, while your pet is under anesthesia, to identify and address some of the diseases your dog is likely to develop. For example, if your pet needs hip X-rays or a puppy tooth extracted, this would be a good time—it’s more convenient for you and easier on your friend too. Routine blood testing prior to surgery also helps us to identify and take precautions against common problems that increase anesthetic or surgical risk. Don’t worry; we’ll discuss the specific problems we will be looking for when the time arrives.                        </p>
+                    </div>
+                </div>  
+            </section6> 
+            <section7>
+                <div class="container">
+                    <div class="row">
+                        <h1>Genetic Predispositions for Siberian Huskies</h1>
+                        <h3>Eye Problems</h3>
+                        <p>
+                            Not many things have as dramatic an impact on your dog’s quality of life as the proper functioning of his eyes. Unfortunately, Siberian Huskies can inherit or develop a number of different eye conditions, some of which may cause blindness if not treated right away, and most of which can be extremely painful! We will evaluate his eyes at every examination to look for any signs for concern.                  
+                        </p>  
+                    </div>
+                    <div class="container">
+                        <div class="indice custom-box">
+                            <ol id="ordered-list" class="list-unstyled custom-list">
+                                <li>
+                                    <a>
+                                        Cataracts are a common cause of blindness in older Huskies. We’ll watch for the lenses of his eyes to become more opaque—meaning they look cloudy instead of clear—when we examine him. Many dogs adjust well to losing their vision and get along just fine. Surgery to remove cataracts and restore sight may also be an option.                                        
+                                    </a>
+                                </li>  
+                                <li>
+                                    <a>
+                                        Glaucoma, an eye condition that affects Siberian Huskies and people too, is an extremely painful disease that rapidly leads to blindness if left untreated. Symptoms include squinting, watery eyes, bluing of the cornea (the clear front part of the eye), and redness in the whites of the eyes. Pain is rarely noticed by pet owners though it is frequently there and can be severe. People who have certain types of glaucoma often report it feels like being stabbed in the eye with an ice pick! Yikes! In advanced cases, the eye may look enlarged or swollen like it’s bulging. We’ll perform an annual glaucoma screening to diagnose and start treatment as early as possible. Glaucoma is a medical emergency. If you see symptoms, don’t wait to call us, go to an emergency clinic!                                    
+                                    </a>                            
+                                </li> 
+                                <li>
+                                    <a>
+                                        Pannus is like a suntan on your dog’s eyeball. In affected breeds, inflammatory cells infiltrate the cornea (the clear part of the eye), which then darkens with exposure to ultraviolet light, and may lead to complete blindness. It’s considered to have a genetic component, since the condition is predominant in certain breeds, like your Siberian Husky. We’ll watch his eyes closely for early signs and start preventive eye medications if needed. Doggie sunglasses are also an option to help reduce sun exposure.                                        
+                                    </a>                            
+                                </li> 
+                            </ol>
+                        </div>
+                    </div>                    
+                </div>  
+            </section7> 
         </main>
-    </section>
+    </section>    
     <footer id="footer-content"></footer>
 </body>
 </html>
