Se implemento el media query y está en proceso em mydogs.html

--- a/mydogs.html
+++ b/mydogs.html
@@ -46,17 +46,28 @@
     </div>  
     <main>    
         <div class="container">
+            <h1>These are my dogs</h1>
+            <p></p>
+            <p></p>
+            <p></p>            
             
             <!-- Grid Layout de Bootstrap: Dos columnas -->
             <div class="row">
                 <div class="col-md-6">
-                    <h2>Columna 1</h2>
-                    <p>Contenido de la primera columna.</p>
+                    <h2>Vela</h2>
+                    <div class="col-md-8">
+                        <div class="indice custom-box">                        
+                            <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
+                        </div>
+                    </div>                     
                 </div>
                 <div class="col-md-6">
-                    <h2>Columna 2</h2>
-                    <p>Contenido de la segunda columna.</p>
-                </div>
+                    <h2>Kira</h2>
+                    <div class="col-md-6">
+                        <div class="indice custom-box">  
+                            <img src="static/images/Kira.webp" alt="Kira" class="img-fluid header-image">
+                        </div>
+                    </div>                                     </div>
             </div>
         </div>
     </main>
