--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </main>
     <section>
-        <footer>
+        <footer class="bg-dark text-white text-center py-3">
             <p>&copy; 2023 My First Website. All rights reserved.</p>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
